CSS FLOATS AND DISPLAY

--- a/style.css
+++ b/style.css
@@ -1,49 +1,36 @@
+* {
+}
 body {
   margin: 0;
   background-color: #ddd;
+
+}
+
+nav li {
+  display: inline-block;
 }
 
 nav {
-  background-color: rgb(51, 51, 51);
+  background-color: #333333;
   position: fixed;
   width: 100%;
   top: 0;
 }
 
-ul {
-  margin: 0;
-  text-align: center;
-}
-
-li {
-  display: inline-block;
-}
-
-li a {
+nav li a {
   line-height: 50px;
   text-decoration: none;
   color: #999;
-  font-family: 'Open Sans';
   font-size: 11px;
   text-transform: uppercase;
   font-weight: bold;
   padding: 0 18px;
+  font-family: 'Roboto', sans-serif;
 }
 
-h1 {
+nav ul {
   margin: 0;
-  font-family: 'Open Sans';
   text-align: center;
-  font-weight: bold;
-  padding: 25px;
-}
-
-.hero {
-  margin-top: 50px; 
-  background: url(http://www.elevationacademy.co/wp-content/uploads/2016/02/Tel-Aviv.jpg) no-repeat center center fixed;
-  height: 400px;
-  padding-top: 250px;
-  background-size: cover;
 }
 
 .hero-image {
@@ -51,32 +38,53 @@ h1 {
   max-width: 500px;
   display: block;
   margin: 0 auto;
+  padding-top: 100px ;
+}
+
+a.anchor {
+  display: block;
+  position: relative;
+  top: -50px;
+  visibility: hidden;
+}
+
+.hero {
+  margin-top: 50px;
+  background: url(http://www.elevationacademy.co/wp-content/uploads/2016/02/Tel-Aviv.jpg) no-repeat center fixed;
+  background-size: cover;
+  height: 700px;
+}
+
+h1 {
+  margin: 0;
+  font-family: 'Roboto';
+  text-align: center;
+  font-weight: bold;
+  padding: 25px;
+}
+
+h3 {
+  text-align: center;
+  font-weight: bold;
+  font-family: 'Roboto';
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+
+.column {
+  display: inline-block;
+  width: 33.33%;
+  vertical-align: top;
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+.food img {
+  object-fit: cover;
+  width: 100%;
 }
 
 section {
   background-color: #ddd;
 }
 
-.food img {
-  display: block;
-  margin: 0 auto;
-  width: 100%;
-  cursor: pointer;
-}
-
-.column {
-  float: left;
-  width: 33.3%;
-}
-
-.column-inner {
-  padding: 20px;
-}
-
-h3 {
-  text-align: center;
-  font-weight: bold;
-  font-family: 'Open Sans';
-  margin-bottom: 5px;
-  font-size: 18px;
-}
