fixed title image added another bg at bottom

--- a/style.css
+++ b/style.css
@@ -55,6 +55,12 @@ a.anchor {
   height: 700px;
 }
 
+.other-bg {
+  background: url(https://placebear.com/850/400) no-repeat center fixed;
+  background-size: cover;
+  height: 700px;
+}
+
 h1 {
   margin: 0;
   font-family: 'Roboto';
